--- a/owl.html
+++ b/owl.html
@@ -133,7 +133,7 @@
         </div>
         </div>
     </div>
-    <script src="js/jquery.hislide.js"></script>
+    <script src="jquery.hislide.js"></script>
     <script>
     $('.slide').hiSlide();
     </script>
